force-app/main/default/objects/Relation__c/Relation__c.object-meta.xml
<CustomObject>
    <description>Objeto personalizado para relacionar multiples actores (cuentas) con distintos proyectos</description>
    <label>Relaciones</label>
    <nameField>
        <displayFormat>REL-{00000000}</displayFormat>
        <label>Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>