force-app/main/default/objects/Relation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cliente/proveedor con el que se relaciona la el proyecto</description>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relations</relationshipLabel>
    <relationshipName>Relations</relationshipName>
    <type>Lookup</type>
</CustomField>