force-app/main/default/objects/Relation__c/fields/Proyect__c.field-meta.xml
<CustomField>
    <fullName>Proyect__c</fullName>
    <description>relación master-detail con el proyecto</description>
    <label>Proyecto</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Relations</relationshipLabel>
    <relationshipName>Relations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>