force-app/main/default/objects/Relation__c/fields/Rol__c.field-meta.xml
<CustomField>
    <fullName>Rol__c</fullName>
    <description>Rol que ejerce la cuenta o el usuario frente al proyecto</description>
    <label>Rol</label>
    <length>90</length>
    <type>Text</type>
</CustomField>