force-app/main/default/objects/Relation__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario con el que se relaciona el proyecto.</description>
    <label>Usuario</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Relations</relationshipName>
    <type>Lookup</type>
</CustomField>